<resources>
    <string name="app_name">Lab114A_2026</string>
    <string name="date">Date:</string>
    <string name="eur">EUR:</string>
    <string name="usd">USD:</string>
    <string name="gbp">GBP:</string>
    <string name="xau">XAU:</string>
    <string name="afisare_curs_valutar">Afisare curs valutar</string>
    <string name="salvare_curs_valutar">Salvare curs valutar</string>
    <string name="extrage_date_din_xml">Extrage date din XML</string>
    <string name="activitate_bnr">Activitate BNR</string>
    <string name="extrage_date_din_json">Extrage date din JSON</string>
    <string name="vizualizare_baza_de_date">Vizualizare baza de date</string>
    <string name="reprezentare_grafica">Reprezentare grafica</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="messaj_de_trimis">Messaj de trimis</string>
    <string name="numarul_de_telefon">Numarul de telefon</string>
    <string name="trimite_sms">Trimite SMS</string>
    <string name="trimite_sms_criptat">Trimite SMS criptat</string>
    <string name="adauga_contact">Adauga Contact</string>
    <string name="extrage_contacte">Extrage Contacte</string>
    <string name="afisare_contacte">Afisare Contacte</string>
    <string name="trimite_email">Trimite Email</string>
    <string name="volley_example">Volley Example</string>
    <string name="camera_example">Camera example</string>
</resources>