<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/optiune1"
        android:title="@string/activitate_bnr" />

    <item android:id="@+id/optiune2"
        android:title="@string/extrage_date_din_xml" />

    <item android:id="@+id/optiune3"
        android:title="@string/extrage_date_din_json" />

    <item android:id="@+id/optiune4"
        android:title="@string/vizualizare_baza_de_date" />

    <item android:id="@+id/optiune5"
        android:title="@string/reprezentare_grafica" />

    <item android:id="@+id/optiune6"
        android:title="Grafic Andorid Plot" />

    <item android:id="@+id/optiune7"
        android:title="Fragment 1" />

    <item android:id="@+id/optiune8"
        android:title="Googe Maps" />
    <item android:id="@+id/optiune9"
        android:title="Senzori si GPS" />



</menu>