<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BNRActivity">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/eur" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eur" />

    <EditText
        android:id="@+id/editTextEUR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/gbp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gbp" />

    <EditText
        android:id="@+id/editTextGBP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/usd" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usd" />

    <EditText
        android:id="@+id/editTextUSD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/xau" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xau" />

    <EditText
        android:id="@+id/editTextXAU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


    <Button
        android:id="@+id/btnShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/afisare_curs_valutar" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvare_curs_valutar" />


</LinearLayout>